--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,11 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="Theme.MishlohaTask.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@color/black</item>
+        <item name="postSplashScreenTheme">@style/Theme.MishlohaTask</item>
+    </style>
+
     <style name="Theme.MishlohaTask" parent="Base.Theme.MishlohaTask" />
 </resources>
