--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/background_deep"
     android:orientation="vertical"
-    android:paddingHorizontal="16dp"
     android:paddingTop="40dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -17,16 +16,30 @@
         style="@style/Text.Style.H2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Favorites" />
+        android:layout_marginHorizontal="16dp"
+        android:text="@string/favorite_title" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFavorite"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_repo" />
+        android:layout_marginHorizontal="8dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFavorite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="2"
+            tools:listitem="@layout/item_repo" />
+
+        <include
+            android:id="@+id/emptyView"
+            layout="@layout/layout_empty_favorite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+    </FrameLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
 
