--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,13 +16,12 @@
         android:layout_weight="1"
         tools:text="Dayly" />
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivFilter"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/selector_check"
-        app:shapeAppearanceOverlay="@style/circleImageView" />
+        android:src="@drawable/selector_check" />
 </androidx.appcompat.widget.LinearLayoutCompat>
 
 
