--- a/app/src/main/res/layout/dialog_repository_detail.xml
+++ b/app/src/main/res/layout/dialog_repository_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +12,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_home"
+        android:src="@drawable/avatar"
         app:shapeAppearanceOverlay="@style/circleImageView" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -72,4 +72,4 @@
         android:backgroundTint="@color/green_fl"
         android:text="Go to GitHub" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
